--- a/pyproject.toml
+++ b/pyproject.toml
@@ -15,6 +15,7 @@ hydra-core = "^1.3.2"
 google-play-scraper = "^1.2.4"
 psycopg2-binary = "^2.9.9"
 pyspark = "3.3.4"
+spark-nlp = "^5.2.2"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.6.0"
@@ -23,7 +24,7 @@ isort = "^5.13.2"
 flake8 = "^7.0.0"
 mypy = "^1.8.0"
 
-[tool.poetry.group.backend.dependencies]
+[tool.poetry.group.webapp.dependencies]
 fastapi = "^0.108.0"
 uvicorn = "^0.25.0"
 
