--- a/pyproject.toml
+++ b/pyproject.toml
@@ -7,8 +7,6 @@ readme = "README.md"
 
 [tool.poetry.dependencies]
 python = "^3.10"
-app-store-scraper = "^0.3.5"
-emoji = "^2.9.0"
 numpy = "^1.26.3"
 pyldavis = "^3.4.1"
 hydra-core = "^1.3.2"
@@ -16,6 +14,7 @@ google-play-scraper = "^1.2.4"
 psycopg2-binary = "^2.9.9"
 pyspark = "3.3.4"
 spark-nlp = "^5.2.2"
+requests = "^2.31.0"
 
 [tool.poetry.group.dev.dependencies]
 pre-commit = "^3.6.0"
